--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AimingCam</string>
+    <string name="app_name">激光瞄准镜</string>
     <string name="menu_login">Login</string>
     <string name="menu_aim">To Aim</string>
     <string name="menu_test">ฅ(Logcat)ฅ</string>
