--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">激光瞄准镜</string>
+    <string name="app_name_eng">AimingCam</string>
     <string name="menu_login">登陆</string>
     <string name="menu_aim">瞄准画面</string>
     <string name="menu_test">ฅ(Logcat)ฅ</string>
