--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="button_up">上移</string>
     <string name="button_down">下移</string>
     <string name="button_set">确定</string>
+    <string name="welcome_words">欢迎使用</string>
 </resources>
