--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="button_down">下移</string>
     <string name="button_set">确定</string>
     <string name="welcome_words">欢迎使用</string>
+    <string name="menu_log">使用记录</string>
 </resources>
